src/styles/global.scss
@import 'styles/colors';

html {
  font-size: 62.5%;
}

body {
  background-color: $offWhite;
  color: $black;
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-size: 1.6rem;
}

* {
  box-sizing: border-box;
}

